# TP1-Automatas

./: .gitignore  README.md  TODO.md
.github/workflows/: main.yml
C/: CMakeLists copy.txt  CMakeLists.txt  grep.sh
C/bld/: CMakeCache.txt  build.ninja  cmake_install.cmake
C/libs/: automata.h  linked_list.h  mini_grep.h  transition.h  utils.h
C/src/: AFD.dot  AFND_TP.dot  AFND_TP2.dot  automata  automata.c  grammar_ll(1).txt  legacy_parser.c  linked_list.c  main.c  main2.c  mini_grep.c  p.txt  parser  parser.c  parser_automaton.c  playground  playground.c  pro5  pruba.c  run.c  test  test.c  tp3.c  transition.c  utils.c
C/tests/: AFD_TP.dot  AFND.dot  AFND_TP2.dot  concat.dot  concat_universe_regex.dot  kleene.dot  minimize_TP2.dot  run.sh  testWriteAFND.dot  test_afnd_to_afd.c  test_belongs.c  test_build.c  test_build_from_dot.c  test_concat.c  test_kleene.c  test_mini_grep.c  test_minimize.c  test_parser.c  test_pertains.c  test_read_and_write.c  test_strings_belongs.c  test_strings_pertains.c  test_tp1.c  test_tp2.c  test_union.c  union.dot
C/tests/exec/: concat_universe_regex.dot  logs  test_afnd_to_afd  test_belongs  test_build  test_build_from_dot  test_concat  test_concatenate  test_kleene  test_mini_grep  test_minimize  test_parser  test_pertains  test_read_and_write  test_strings_belongs  test_strings_pertains  test_tp1  test_tp2  test_union
Python/: AFND.dot  Prueba.dot  tp2_result.dot
